--- a/Hands_on_V.Rmd
+++ b/Hands_on_V.Rmd
@@ -17,6 +17,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 You will download a subset of [MIMIC III](https://www.nature.com/articles/sdata201635) data from the campus global. The data contains only the hospital admission data. The only preprocessing that has been done is changing the column names and removing the information for  ~ 8,000 neonates admitted between 2001 and 2008 that had no further information. 
 ```{r}
+install.packages("data.table")
 library(data.table)
 codes <- fread("data/allDiseaseCodes.txt", quote = "")
 
